Added hyponym meronym extractor

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -2915,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2929,9 +2929,15 @@
     "            match_str = \"nomatch\"\n",
     "\n",
     "        hypernym_syn = syn.hypernyms()\n",
+    "        hyponym_syn = syn.hyponyms()\n",
+    "        meronym_syn = syn.part_meronyms()\n",
     "        if len(hypernym_syn) >0:\n",
     "            hypernym = hypernym_syn[0].name().split('.')[0]\n",
-    "            rev_map = {f\"{word}#{idx}\":syn}\n",
+    "            rev_map = {\n",
+    "                f\"{word}#{idx}\":syn,\n",
+    "                \"hyponyms\": [hyp.name().split(\".\")[0] for hyp in hyponym_syn],\n",
+    "                \"meronyms\": [mero.name().split(\".\")[0] for mero in meronym_syn]\n",
+    "            }\n",
     "            if level in hypernymy_dict[hypernym][\"rev_map\"]:\n",
     "                hypernymy_dict[hypernym][\"rev_map\"][level].append(rev_map) \n",
     "            else:\n",
@@ -2945,25 +2951,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def extract_hyponyms_meronym(hypernymy_dict, hypernym, kind=\"hyponyms\"):\n",
+    "    nym = []\n",
+    "    reverse_map = hypernymy_dict[hypernym]['rev_map']\n",
+    "    extract_from = []\n",
+    "    if \"direct\" in reverse_map:\n",
+    "        extract_from.append(\"direct\")\n",
+    "    if \"l1\" in reverse_map:\n",
+    "        extract_from.append(\"l1\")\n",
+    "    \n",
+    "    for relation in extract_from:\n",
+    "        num_relations = len(reverse_map[relation])\n",
+    "        for i in range(num_relations):\n",
+    "            nym += reverse_map[relation][i][kind]\n",
+    "            \n",
+    "    return list(set(nym))\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sense_group_dataframe' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9ded81fd861f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mall_hypernymy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mall_hypernyms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnum_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msense_group_dataframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msense_group_dataframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"sense_group_name\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"sense_group_num\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"related_senses\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_senses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sense_group_dataframe' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "all_hypernymy = []\n",
-    "all_hypernyms = []\n",
+    "all_hhm_map = []\n",
+    "all_hyponyms = []\n",
+    "all_meronyms = []\n",
     "num_words = len(sense_group_dataframe)\n",
     "for _, row in tqdm(sense_group_dataframe[[\"sense_group_name\", \"sense_group_num\", \"related_senses\"]].iterrows(), total=num_words):\n",
     "    word, idx, r_senses = row\n",
     "    \n",
     "    hypernymy_dict = defaultdict(lambda: defaultdict(dict))\n",
-    "    generate_hypernymy(word, hypernymy_dict, level=\"direct\")\n",
+    "    generate_hypernymy(word, idx, hypernymy_dict, level=\"direct\")\n",
     "    r_senses_list = ast.literal_eval(r_senses)\n",
     "    for w in r_senses_list:\n",
     "        related_word, related_idx = str(w).split(\"#\")\n",
     "        generate_hypernymy(related_word, related_idx, hypernymy_dict)\n",
-    "    hypernymy_dict_sorted = {k: v for k, v in sorted(hypernymy_dict.items(), key=lambda item: item[1]['sum_weight'], reverse=True)}\n",
-    "    all_hypernyms.append(hypernymy_dict_sorted.keys[0])\n",
-    "    all_hypernymy.append(hypernymy_dict_sorted)"
+    "    if len(hypernymy_dict)>0:\n",
+    "        hypernymy_dict_sorted = {k: v for k, v in sorted(hypernymy_dict.items(), key=lambda item: item[1]['sum_weight'], reverse=True)}\n",
+    "        hypernym_name = list(hypernymy_dict_sorted.keys())[0]\n",
+    "        \n",
+    "        hyponyms = extract_hyponyms_meronym(hypernymy_dict_sorted, hypernym_name, kind=\"hyponyms\")\n",
+    "        meronyms = extract_hyponyms_meronym(hypernymy_dict_sorted, hypernym_name, kind=\"meronyms\")\n",
+    "        \n",
+    "        all_hypernyms.append(hypernym_name)\n",
+    "        all_hyponyms.append(hyponyms)\n",
+    "        all_meronyms.append(meronyms)\n",
+    "        all_hhm_map.append(hypernymy_dict_sorted)\n",
+    "    else:\n",
+    "        all_hypernyms.append(\"--NA--\")\n",
+    "        all_hyponyms.append(\"--NA--\")\n",
+    "        all_meronyms.append(\"--NA--\")\n",
+    "        all_hhm_map.append(hypernymy_dict)"
    ]
   },
   {
@@ -2972,8 +3029,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sense_group_dataframe[\"hypernymy_map\"] = all_hypernymy\n",
-    "sense_group_dataframe[\"hypernym\"] = all_hypernyms"
+    "sense_group_dataframe[\"hhm_map\"] = all_hhm_map\n",
+    "sense_group_dataframe[\"hypernym\"] = all_hypernyms\n",
+    "sense_group_dataframe[\"hyponym\"] = all_hyponyms\n",
+    "sense_group_dataframe[\"meronym\"] = all_meronyms"
    ]
   }
  ],
