Added code to extract hhm words that exist in corpus

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -712,6 +712,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(corpus_fpath, \"r\") as f:\n",
+    "    corpus_data = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -807,6 +817,10 @@
     "all_hhm_map = []\n",
     "all_hyponyms = []\n",
     "all_meronyms = []\n",
+    "\n",
+    "all_hypernyms_from_corpus = []\n",
+    "all_hyponyms_from_corpus = []\n",
+    "all_meronyms_from_corpus = []\n",
     "num_words = len(sense_group_dataframe)\n",
     "for _, row in tqdm(sense_group_dataframe[[\"sense_group_name\", \"sense_group_num\", \"related_senses\"]].iterrows(), total=num_words):\n",
     "    word, idx, r_senses = row\n",
@@ -819,19 +833,47 @@
     "        generate_hypernymy(related_word, related_idx, hypernymy_dict)\n",
     "    if len(hypernymy_dict)>0:\n",
     "        hypernymy_dict_sorted = {k: v for k, v in sorted(hypernymy_dict.items(), key=lambda item: item[1]['sum_weight'], reverse=True)}\n",
-    "        hypernym_name = list(hypernymy_dict_sorted.keys())[0]\n",
     "        \n",
+    "        possible_hypernyms = list(hypernymy_dict_sorted.keys())\n",
+    "        hypernym_name = possible_hypernyms[0]\n",
     "        hyponyms = extract_hyponyms_meronym(hypernymy_dict_sorted, hypernym_name, kind=\"hyponyms\")\n",
     "        meronyms = extract_hyponyms_meronym(hypernymy_dict_sorted, hypernym_name, kind=\"meronyms\")\n",
     "        \n",
     "        all_hypernyms.append(hypernym_name)\n",
     "        all_hyponyms.append(hyponyms)\n",
     "        all_meronyms.append(meronyms)\n",
+    "        \n",
+    "        \n",
+    "        hypernym_from_corpus = None\n",
+    "        hyponyms_from_corpus = []\n",
+    "        meronyms_from_corpus = []\n",
+    "        for hypernym in possible_hypernyms:\n",
+    "            if hypernym in corpus_data:\n",
+    "                hypernym_from_corpus = hypernym\n",
+    "        if hypernym_from_corpus:\n",
+    "            hyponyms += extract_hyponyms_meronym(hypernymy_dict_sorted, hypernym_from_corpus, kind=\"hyponyms\")\n",
+    "            meronyms += extract_hyponyms_meronym(hypernymy_dict_sorted, hypernym_from_corpus, kind=\"meronyms\")\n",
+    "            \n",
+    "        for hypo in hyponyms:\n",
+    "            if hypo in corpus_data:\n",
+    "                hyponyms_from_corpus.append(hypo)\n",
+    "                \n",
+    "        for mero in meronyms:\n",
+    "            if mero in corpus_data:\n",
+    "                meronyms_from_corpus.append(mero)\n",
+    "        \n",
+    "        \n",
+    "        all_hypernyms_from_corpus.append(hypernym_from_corpus)\n",
+    "        all_hyponyms_from_corpus.append(hyponyms_from_corpus)\n",
+    "        all_meronyms_from_corpus.append(meronyms_from_corpus)\n",
     "        all_hhm_map.append(hypernymy_dict_sorted)\n",
     "    else:\n",
     "        all_hypernyms.append(\"--NA--\")\n",
     "        all_hyponyms.append(\"--NA--\")\n",
     "        all_meronyms.append(\"--NA--\")\n",
+    "        all_hypernyms_from_corpus.append(\"--NA--\")\n",
+    "        all_hyponyms_from_corpus.append(\"--NA--\")\n",
+    "        all_meronyms_from_corpus.append(\"--NA--\")\n",
     "        all_hhm_map.append(hypernymy_dict)"
    ]
   },
@@ -844,7 +886,10 @@
     "sense_group_dataframe[\"hhm_map\"] = all_hhm_map\n",
     "sense_group_dataframe[\"hypernym\"] = all_hypernyms\n",
     "sense_group_dataframe[\"hyponym\"] = all_hyponyms\n",
-    "sense_group_dataframe[\"meronym\"] = all_meronyms"
+    "sense_group_dataframe[\"meronym\"] = all_meronyms\n",
+    "sense_group_dataframe[\"hypernym_from_corpus\"] = all_hypernyms_from_corpus\n",
+    "sense_group_dataframe[\"hyponym_from_corpus\"] = all_hyponyms_from_corpus\n",
+    "sense_group_dataframe[\"meronym_from_corpus\"] = all_meronyms_from_corpus"
    ]
   },
   {
