Updated code to consider only in-corpus words

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -745,7 +745,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_hypernymy(word, idx, hypernymy_dict, level=\"l1\"):\n",
+    "def generate_hypernymy(word, idx, hypernymy_dict, corpus, level=\"l1\"):\n",
     "    token = nlp(str(word))[0]\n",
     "    synsets = token._.wordnet.synsets()\n",
     "    for syn in synsets:\n",
@@ -761,8 +761,8 @@
     "            hypernym = hypernym_syn[0].name().split('.')[0]\n",
     "            rev_map = {\n",
     "                f\"{word}#{idx}\":syn,\n",
-    "                \"hyponyms\": [hyp.name().split(\".\")[0] for hyp in hyponym_syn],\n",
-    "                \"meronyms\": [mero.name().split(\".\")[0] for mero in meronym_syn]\n",
+    "                \"hyponyms\": [hyp.name().split(\".\")[0] for hyp in hyponym_syn if hyp.name().split(\".\")[0]],\n",
+    "                \"meronyms\": [mero.name().split(\".\")[0] for mero in meronym_syn if mero.name().split(\".\")[0]]\n",
     "            }\n",
     "            if level in hypernymy_dict[hypernym][\"rev_map\"]:\n",
     "                hypernymy_dict[hypernym][\"rev_map\"][level].append(rev_map) \n",
@@ -828,11 +828,12 @@
     "    word, idx, r_senses = row\n",
     "    \n",
     "    hypernymy_dict = defaultdict(lambda: defaultdict(dict))\n",
-    "    generate_hypernymy(word, idx, hypernymy_dict, level=\"direct\")\n",
+    "    generate_hypernymy(word, idx, hypernymy_dict, corpus, level=\"direct\")\n",
     "    r_senses_list = ast.literal_eval(r_senses)\n",
     "    for w in r_senses_list:\n",
     "        related_word, related_idx = str(w).split(\"#\")\n",
-    "        generate_hypernymy(related_word, related_idx, hypernymy_dict)\n",
+    "        if related_word in corpus:\n",
+    "            generate_hypernymy(related_word, related_idx, corpus, hypernymy_dict)\n",
     "    if len(hypernymy_dict)>0:\n",
     "        hypernymy_dict_sorted = {k: v for k, v in sorted(hypernymy_dict.items(), key=lambda item: item[1]['sum_weight'], reverse=True)}\n",
     "        \n",
