Bug fix while generating hypernymy

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_vectors = False # Flag to decide to load sense and word vectors, to word with WSD module\n",
     "load_data = True # Flag to decide to load raw data\n",
     "generate_sense_embeddings = False # Flag to decide to use vectors to generate sense embeddings for each noun in corpus\n",
-    "generate_hypernymy_flag = True # Flag to decide to use wordnet to generate hypernymy map for each noun in the data"
+    "generate_hypernymy_flag = False # Flag to decide to use wordnet to generate hypernymy map for each noun in the data"
    ]
   },
   {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
     "        if len(hypernym_syn) >0:\n",
     "            hypernym = hypernym_syn[0].name().split('.')[0]\n",
     "            rev_map = {\n",
-    "                f\"{word}#{idx}\":syn,\n",
+    "#                 f\"{word}#{idx}\":syn,\n",
     "                \"hyponyms\": [hyp.name().split(\".\")[0] for hyp in hyponym_syn],\n",
     "                \"meronyms\": [mero.name().split(\".\")[0] for mero in meronym_syn]\n",
     "            }\n",
@@ -896,11 +896,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neither generate hypernymy flag, nor hhm mappings file is present. Set the appropriate flags to proceed further\n"
+     ]
+    }
+   ],
    "source": [
-    "if generate_hypernymy:\n",
+    "if generate_hypernymy_flag:\n",
     "    sense_group_dataframe[\"hhm_map\"] = all_hhm_map\n",
     "    sense_group_dataframe[\"hypernym\"] = all_hypernyms\n",
     "    sense_group_dataframe[\"hyponym\"] = all_hyponyms\n",
@@ -917,121 +925,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hhm_mappings_file = os.path.join(\"hhm_mappings.csv\")\n",
+    "# sense_group_dataframe = pd.read_csv(hhm_mappings_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'west_germanic': {'rev_map': {'direct': [{'english#6': Synset('english.n.01'),\n",
-       "     'hyponyms': ['american_english',\n",
-       "      'cockney',\n",
-       "      'geordie',\n",
-       "      \"king's_english\",\n",
-       "      'middle_english',\n",
-       "      'modern_english',\n",
-       "      'old_english',\n",
-       "      'oxford_english',\n",
-       "      'received_pronunciation',\n",
-       "      'scottish'],\n",
-       "     'meronyms': []}],\n",
-       "   'l1': [{'english#6': Synset('english.n.01'),\n",
-       "     'hyponyms': ['american_english',\n",
-       "      'cockney',\n",
-       "      'geordie',\n",
-       "      \"king's_english\",\n",
-       "      'middle_english',\n",
-       "      'modern_english',\n",
-       "      'old_english',\n",
-       "      'oxford_english',\n",
-       "      'received_pronunciation',\n",
-       "      'scottish'],\n",
-       "     'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.01'),\n",
-       "     'hyponyms': ['american_english',\n",
-       "      'cockney',\n",
-       "      'geordie',\n",
-       "      \"king's_english\",\n",
-       "      'middle_english',\n",
-       "      'modern_english',\n",
-       "      'old_english',\n",
-       "      'oxford_english',\n",
-       "      'received_pronunciation',\n",
-       "      'scottish'],\n",
-       "     'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.01'),\n",
-       "     'hyponyms': ['american_english',\n",
-       "      'cockney',\n",
-       "      'geordie',\n",
-       "      \"king's_english\",\n",
-       "      'middle_english',\n",
-       "      'modern_english',\n",
-       "      'old_english',\n",
-       "      'oxford_english',\n",
-       "      'received_pronunciation',\n",
-       "      'scottish'],\n",
-       "     'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.01'),\n",
-       "     'hyponyms': ['american_english',\n",
-       "      'cockney',\n",
-       "      'geordie',\n",
-       "      \"king's_english\",\n",
-       "      'middle_english',\n",
-       "      'modern_english',\n",
-       "      'old_english',\n",
-       "      'oxford_english',\n",
-       "      'received_pronunciation',\n",
-       "      'scottish'],\n",
-       "     'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.01'),\n",
-       "     'hyponyms': ['american_english',\n",
-       "      'cockney',\n",
-       "      'geordie',\n",
-       "      \"king's_english\",\n",
-       "      'middle_english',\n",
-       "      'modern_english',\n",
-       "      'old_english',\n",
-       "      'oxford_english',\n",
-       "      'received_pronunciation',\n",
-       "      'scottish'],\n",
-       "     'meronyms': []}]},\n",
-       "  'sum_weight': 15},\n",
-       " 'nation': {'rev_map': {'direct': [{'english#6': Synset('english.n.02'),\n",
-       "     'hyponyms': [],\n",
-       "     'meronyms': []}],\n",
-       "   'l1': [{'english#6': Synset('english.n.02'),\n",
-       "     'hyponyms': [],\n",
-       "     'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.02'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.02'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.02'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.02'), 'hyponyms': [], 'meronyms': []}]},\n",
-       "  'sum_weight': 15},\n",
-       " 'humanistic_discipline': {'rev_map': {'direct': [{'english#6': Synset('english.n.03'),\n",
-       "     'hyponyms': [],\n",
-       "     'meronyms': []}],\n",
-       "   'l1': [{'english#6': Synset('english.n.03'),\n",
-       "     'hyponyms': [],\n",
-       "     'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.03'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.03'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.03'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.03'), 'hyponyms': [], 'meronyms': []}]},\n",
-       "  'sum_weight': 15},\n",
-       " 'spin': {'rev_map': {'direct': [{'english#6': Synset('english.n.04'),\n",
-       "     'hyponyms': [],\n",
-       "     'meronyms': []}],\n",
-       "   'l1': [{'english#6': Synset('english.n.04'),\n",
-       "     'hyponyms': [],\n",
-       "     'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.04'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.04'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.04'), 'hyponyms': [], 'meronyms': []},\n",
-       "    {'english#6': Synset('english.n.04'), 'hyponyms': [], 'meronyms': []}]},\n",
-       "  'sum_weight': 15}}"
+       "'{\\'west_germanic\\': {\\'rev_map\\': {\\'direct\\': [{\\'english#6\\': Synset(\\'english.n.01\\'), \\'hyponyms\\': [\\'american_english\\', \\'cockney\\', \\'geordie\\', \"king\\'s_english\", \\'middle_english\\', \\'modern_english\\', \\'old_english\\', \\'oxford_english\\', \\'received_pronunciation\\', \\'scottish\\'], \\'meronyms\\': []}], \\'l1\\': [{\\'english#6\\': Synset(\\'english.n.01\\'), \\'hyponyms\\': [\\'american_english\\', \\'cockney\\', \\'geordie\\', \"king\\'s_english\", \\'middle_english\\', \\'modern_english\\', \\'old_english\\', \\'oxford_english\\', \\'received_pronunciation\\', \\'scottish\\'], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.01\\'), \\'hyponyms\\': [\\'american_english\\', \\'cockney\\', \\'geordie\\', \"king\\'s_english\", \\'middle_english\\', \\'modern_english\\', \\'old_english\\', \\'oxford_english\\', \\'received_pronunciation\\', \\'scottish\\'], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.01\\'), \\'hyponyms\\': [\\'american_english\\', \\'cockney\\', \\'geordie\\', \"king\\'s_english\", \\'middle_english\\', \\'modern_english\\', \\'old_english\\', \\'oxford_english\\', \\'received_pronunciation\\', \\'scottish\\'], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.01\\'), \\'hyponyms\\': [\\'american_english\\', \\'cockney\\', \\'geordie\\', \"king\\'s_english\", \\'middle_english\\', \\'modern_english\\', \\'old_english\\', \\'oxford_english\\', \\'received_pronunciation\\', \\'scottish\\'], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.01\\'), \\'hyponyms\\': [\\'american_english\\', \\'cockney\\', \\'geordie\\', \"king\\'s_english\", \\'middle_english\\', \\'modern_english\\', \\'old_english\\', \\'oxford_english\\', \\'received_pronunciation\\', \\'scottish\\'], \\'meronyms\\': []}]}, \\'sum_weight\\': 15}, \\'nation\\': {\\'rev_map\\': {\\'direct\\': [{\\'english#6\\': Synset(\\'english.n.02\\'), \\'hyponyms\\': [], \\'meronyms\\': []}], \\'l1\\': [{\\'english#6\\': Synset(\\'english.n.02\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.02\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.02\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.02\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.02\\'), \\'hyponyms\\': [], \\'meronyms\\': []}]}, \\'sum_weight\\': 15}, \\'humanistic_discipline\\': {\\'rev_map\\': {\\'direct\\': [{\\'english#6\\': Synset(\\'english.n.03\\'), \\'hyponyms\\': [], \\'meronyms\\': []}], \\'l1\\': [{\\'english#6\\': Synset(\\'english.n.03\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.03\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.03\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.03\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.03\\'), \\'hyponyms\\': [], \\'meronyms\\': []}]}, \\'sum_weight\\': 15}, \\'spin\\': {\\'rev_map\\': {\\'direct\\': [{\\'english#6\\': Synset(\\'english.n.04\\'), \\'hyponyms\\': [], \\'meronyms\\': []}], \\'l1\\': [{\\'english#6\\': Synset(\\'english.n.04\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.04\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.04\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.04\\'), \\'hyponyms\\': [], \\'meronyms\\': []}, {\\'english#6\\': Synset(\\'english.n.04\\'), \\'hyponyms\\': [], \\'meronyms\\': []}]}, \\'sum_weight\\': 15}}'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
