--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -16,14 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Cell\n",
     "import os\n",
     "import sys\n",
     "import time\n",
     "import math\n",
+    "import re\n",
     "from collections import defaultdict\n",
     "import ast\n",
     "from tqdm import tqdm\n",
@@ -33,6 +35,7 @@
     "import pandas as pd\n",
     "from spacy_wordnet.wordnet_annotator import WordnetAnnotator \n",
     "import plotly.graph_objects as go\n",
+    "from plotly.io import write_image, write_html\n",
     "import igraph\n",
     "from igraph import Graph, EdgeSeq"
    ]
@@ -46,10 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Cell 2\n",
     "sys.path.append(\"sensegram_package/\")\n",
     "import sensegram\n",
     "from wsd import WSD"
@@ -64,10 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Constants\n",
     "load_vectors = True # Flag to decide to load sense and word vectors, to word with WSD module\n",
     "load_data = True # Flag to decide to load raw data\n",
     "generate_sense_embeddings = True # Flag to decide to use vectors to generate sense embeddings for each noun in corpus\n",
@@ -90,11 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data file paths\n",
     "data_directory = os.path.join(os.getcwd(), \"data\")\n",
+    "outputs_directory = os.path.join(os.getcwd(), \"output\")\n",
+    "\n",
     "corpus_fpath = os.path.join(data_directory, \"table.txt\")\n",
     "sense_vectors_fpath = os.path.join(data_directory, \"model\", \"wiki.txt.clusters.minsize5-1000-sum-score-20.sense_vectors\")\n",
     "word_vectors_fpath = os.path.join(data_directory, \"model\", \"wiki.txt.word_vectors\")\n",
@@ -111,19 +119,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 1118.396746635437seconds to load vector files\n",
+      "Could not find vector files. Check file paths and ensure the right files exists\n",
       "Reading the corpus now!\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/copa/Documents/freelance/hhm_extractor/data/table.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-150-b09a5a1f5a4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mload_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Reading the corpus now!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus_fpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0mcorpus_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/copa/Documents/freelance/hhm_extractor/data/table.txt'"
      ]
     }
    ],
    "source": [
+    "# Vector & corpus loader\n",
     "if load_vectors:\n",
     "    s = time.time()\n",
     "\n",
@@ -209,6 +229,28 @@
     "    - Table#3 - Table of contents.\n",
     "    - table#4 - Hotel/Furniture.\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sense extraction helper function\n",
+    "def print_word_senses(word, corpus_data, sense_vectors, ignore_case=False):\n",
+    "    senses = sense_vectors.get_senses(word, ignore_case=ignore_case)\n",
+    "    \n",
+    "    print(\"Probabilities of the senses:\\n{}\\n\\n\".format(senses))\n",
+    "    for sense_id, prob in senses:\n",
+    "        print(sense_id)\n",
+    "        print(\"=\"*20)\n",
+    "        for rsense_id, sim in sense_vectors.wv.most_similar(sense_id):\n",
+    "            sense_word = rsense_id.split(\"#\")[0]\n",
+    "            sense_word = sense_word if ignore_case else sense_word.lower()\n",
+    "            count = sum(1 for _ in re.finditer(r'\\b%s\\b' % re.escape(sense_word), corpus_data))\n",
+    "            print(f\"{rsense_id} {sim} [{count}]\".format(rsense_id, sim))\n",
+    "        print(\"\\n\")"
    ]
   },
   {
@@ -312,17 +354,10 @@
     }
    ],
    "source": [
+    "# Display senses of word\n",
     "if load_vectors:\n",
     "    test_word = \"monday\"\n",
-    "\n",
-    "    print(\"Probabilities of the senses:\\n{}\\n\\n\".format(sense_vectors.get_senses(test_word, ignore_case=False)))\n",
-    "\n",
-    "    for sense_id, prob in sense_vectors.get_senses(test_word, ignore_case=True):\n",
-    "        print(sense_id)\n",
-    "        print(\"=\"*20)\n",
-    "        for rsense_id, sim in sense_vectors.wv.most_similar(sense_id):\n",
-    "            print(\"{} {:f}\".format(rsense_id, sim))\n",
-    "        print(\"\\n\")"
+    "    print_word_senses(test_word, corpus_data, sense_vectors, ignore_case=False)"
    ]
   },
   {
@@ -370,6 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading Word Sense Disambiguation model\n",
     "if load_vectors:\n",
     "    wsd_model = WSD(sense_vectors, word_vectors, window=15, method='prob', verbose=True)\n",
     "else:\n",
@@ -400,6 +436,7 @@
     }
    ],
    "source": [
+    "# Extracting disambiguates senses\n",
     "if load_vectors:\n",
     "    print(wsd_model.disambiguate(corpus_data, \"delivery\"))\n",
     "else:\n",
@@ -1180,6 +1217,7 @@
     }
    ],
    "source": [
+    "# Use WSD model to create file with Sense mappings\n",
     "if (not os.path.exists(corpus_data_sense_mappings_file)) or generate_sense_embeddings:\n",
     "    wsd_model2 = WSD(sense_vectors, word_vectors, window=window, method='prob', verbose=False)\n",
     "    contextual_data = prepare_corpus_data_with_context(corpus_fpath, window=window, force_update=True)\n",
@@ -1330,6 +1368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Constants for creating HHM map\n",
     "weights = {\n",
     "    \"direct_match\": 8,\n",
     "    \"direct_nomatch\": 5,\n",
@@ -1420,6 +1459,7 @@
     }
    ],
    "source": [
+    "# Generate HHM flag\n",
     "if generate_hypernymy_flag:\n",
     "    all_hypernyms = []\n",
     "    all_hhm_map = []\n",
@@ -1481,6 +1521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Update HHM data with mappings\n",
     "if generate_hypernymy_flag:\n",
     "    sense_group_dataframe[\"hhm_map\"] = all_hhm_map\n",
     "    sense_group_dataframe[\"hypernym\"] = all_hypernyms\n",
@@ -1754,8 +1795,6 @@
    "source": [
     "def extract_hypo_mero_map(word, hhm_mappings_df, only_from_corpus=True):\n",
     "    subset_df = hhm_mappings_df[hhm_mappings_df[\"sense_group_name\"]==word]\n",
-    "#     if subset_df.shape[0] == 0:\n",
-    "#         raise Exception(f\"No mappings found for {word}! Change the word an try again.\")\n",
     "    \n",
     "    rows_to_consider = [\"hypernym\", \"hyponym\", \"meronym\"]\n",
     "    if only_from_corpus:\n",
@@ -1874,11 +1913,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_plot(word, fig, save_format, top_n):\n",
+    "    if not save_format in [\"svg\", \"pdf\", \"html\", \"png\", \"jpg\"]:\n",
+    "        print(f\"Unsupported file format {save_format}. Could not save to file\")\n",
+    "        sys.exit(0)\n",
+    "    output_filepath = os.path.join(outputs_directory, save_format, f\"{word}.{save_format}\")\n",
+    "    if not os.path.exists(output_filepath):\n",
+    "        os.makedirs(output_filepath)\n",
+    "    if save_format in [\"svg\", \"pdf\", \"png\", \"jpg\"]:\n",
+    "        write_file(fig, output_filepath)\n",
+    "    else:\n",
+    "        write_html(fig, output_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_plot(word, hhm_mappings_df, only_in_corpus=False, top_n=3):\n",
+    "def generate_plot(word, hhm_mappings_df, only_in_corpus=False, top_n=3, save_format=\"svg\"):\n",
     "    hypo_mero_map = extract_hypo_mero_map(word, hhm_mappings_df, only_from_corpus=only_in_corpus)\n",
     "    position, edges = generate_plot_indices(word, hypo_mero_map, top_n)\n",
     "    \n",
@@ -1929,6 +1987,7 @@
     "                  hovermode='closest',\n",
     "                  plot_bgcolor='rgb(248,248,248)'\n",
     "                  )\n",
+    "    save_plot(word, fig, save_format, top_n)\n",
     "    fig.show()\n"
    ]
   },
@@ -3186,27 +3245,6 @@
     "word = \"table\"\n",
     "generate_plot(word, hhm_mappings_df, only_in_corpus=True, top_n=3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
