Added output filter to sensegram code

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "# Sense extraction helper function\n",
-    "def print_word_senses(word, corpus_data, sense_vectors, ignore_case=False):\n",
+    "def print_word_senses(word, corpus_data, sense_vectors, ignore_case=False, only_in_corpus=False):\n",
     "    senses = sense_vectors.get_senses(word, ignore_case=ignore_case)\n",
     "    \n",
     "    print(\"Probabilities of the senses:\\n{}\\n\\n\".format(senses))\n",
@@ -249,6 +249,8 @@
     "            sense_word = rsense_id.split(\"#\")[0]\n",
     "            sense_word = sense_word if ignore_case else sense_word.lower()\n",
     "            count = sum(1 for _ in re.finditer(r'\\b%s\\b' % re.escape(sense_word), corpus_data))\n",
+    "            if only_in_corpus and count==0:\n",
+    "                continue\n",
     "            print(f\"{rsense_id} {sim} [{count}]\".format(rsense_id, sim))\n",
     "        print(\"\\n\")"
    ]
@@ -357,7 +359,7 @@
     "# Display senses of word\n",
     "if load_vectors:\n",
     "    test_word = \"monday\"\n",
-    "    print_word_senses(test_word, corpus_data, sense_vectors, ignore_case=False)"
+    "    print_word_senses(test_word, corpus_data, sense_vectors, ignore_case=False, only_in_corpus=False)"
    ]
   },
   {
