Updated code to generate Sense embeddings from w2v file

--- a/Sensegram_generator.ipynb
+++ b/Sensegram_generator.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "generate_txt_embeddings = True\n",
     "data_file = \"data/corpus.txt\"\n",
     "embeddings_file = \"data/word2vec_twitter_tokens.bin\"\n",
-    "embeddings_txt_file = \"data/word2vec_twitter_tokens.word_vectors\""
+    "embeddings_txt_file = \"model/word2vec_twitter_tokens.word_vectors\""
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,37 +127,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# subprocess.call(f\"python sensegram_package/train.py {embeddings_txt_file}\".split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1511"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "subprocess.call(f\"python sensegram_package/train.py {embeddings_txt_file}\".split())"
+    "import gc\n",
+    "gc.collect()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading spacy model...\n",
+      "/home/rc/miniconda3/envs/sensegram/lib/python3.6/site-packages/sklearn/externals/joblib/__init__.py:15: FutureWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
+      "  warnings.warn(msg, category=FutureWarning)\n",
+      "2020-07-21 15:53:29,947 : INFO : Loading faiss with AVX2 support.\n",
+      "2020-07-21 15:53:29,948 : INFO : Loading faiss.\n",
+      "model/word2vec_twitter_tokens.word_vectors\n",
+      "Using existing vectors: model/word2vec_twitter_tokens.word_vectors\n",
+      "Start collection of word neighbours.\n",
+      "Read w2v file\n",
+      "2020-07-21 15:53:29,964 : INFO : loading projection weights from model/word2vec_twitter_tokens.word_vectors\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python sensegram_package/train.py data/word2vec_twitter_tokens -size 400 -iter 7"
+   ]
   },
   {
    "cell_type": "code",
