--- a/Sensegram_generator.ipynb
+++ b/Sensegram_generator.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1511"
+       "0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -169,19 +169,44 @@
       "Loading spacy model...\n",
       "/home/rc/miniconda3/envs/sensegram/lib/python3.6/site-packages/sklearn/externals/joblib/__init__.py:15: FutureWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
       "  warnings.warn(msg, category=FutureWarning)\n",
-      "2020-07-21 15:53:29,947 : INFO : Loading faiss with AVX2 support.\n",
-      "2020-07-21 15:53:29,948 : INFO : Loading faiss.\n",
+      "2020-07-22 17:21:08,111 : INFO : Loading faiss with AVX2 support.\n",
+      "2020-07-22 17:21:08,112 : INFO : Loading faiss.\n",
       "model/word2vec_twitter_tokens.word_vectors\n",
       "Using existing vectors: model/word2vec_twitter_tokens.word_vectors\n",
-      "Start collection of word neighbours.\n",
-      "Read w2v file\n",
-      "2020-07-21 15:53:29,964 : INFO : loading projection weights from model/word2vec_twitter_tokens.word_vectors\n"
+      "Using existing neighbors: model/word2vec_twitter_tokens.N200.graph\n",
+      "\n",
+      "Start clustering of word ego-networks.\n",
+      "Loaded in 0.000559 sec.\n",
+      "Clusters: model/word2vec_twitter_tokens.n200.clusters\n",
+      "Elapsed: 0.133438 sec.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"sensegram_package/train.py\", line 115, in <module>\n",
+      "    main()\n",
+      "  File \"sensegram_package/train.py\", line 93, in main\n",
+      "    filter_clusters.run(clusters_fpath, clusters_minsize_fpath, args.min_size)\n",
+      "  File \"/home/rc/Documents/hhm_extractor/sensegram_package/filter_clusters.py\", line 33, in run\n",
+      "    print(\"Output senses: %d of %d (%.2f %%)\" % (selected_num, num, float(selected_num)/num*100.))\n",
+      "ZeroDivisionError: float division by zero\n"
      ]
     }
    ],
    "source": [
     "!python sensegram_package/train.py data/word2vec_twitter_tokens -size 400 -iter 7"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
