Made context extraction parallel

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -29,6 +29,7 @@
     "from collections import defaultdict\n",
     "import ast\n",
     "from tqdm import tqdm\n",
+    "import multiprocessing\n",
     "\n",
     "from gensim.models import KeyedVectors\n",
     "import spacy\n",
@@ -499,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_sense_group_from_corpus(context_data, wsd_model, sense_vectors, output_file):\n",
+    "def get_sense_group_from_corpus(context_data, wsd_model, sense_vectors):\n",
     "    output = {\n",
     "        \"word\": [],\n",
     "        \"context\": [],\n",
@@ -531,9 +532,35 @@
     "        output[\"related_senses\"].append(related_senses+related_senses_l2)\n",
     "    \n",
     "    output_df = pd.DataFrame(output)\n",
-    "    output_df.to_csv(output_file, index=False)\n",
     "    \n",
     "    return output_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def worker_func(p_name, tasks, results):\n",
+    "    while True:\n",
+    "        indices = tasks.get()\n",
+    "        if indices == None:\n",
+    "            print('[%s] evaluation routine quits' % p_name)\n",
+    "\n",
+    "            # Indicate finished\n",
+    "            results.put(\"Done\")\n",
+    "            break\n",
+    "        else:\n",
+    "            # Compute result and mimic a long-running task\n",
+    "            batch_df = get_sense_group_from_corpus(contextual_data[indices[0]:indices[1]], wsd_model2, sense_vectors)\n",
+    "\n",
+    "            # Output which process received the value\n",
+    "            # and the calculation result\n",
+    "            print(f\"{p_name} recieved computation of batch {indices}\")\n",
+    "\n",
+    "            # Add result to the queue\n",
+    "            results.put(batch_df)"
    ]
   },
   {
@@ -555,9 +582,51 @@
    "source": [
     "# Use WSD model to create file with Sense mappings\n",
     "if (not os.path.exists(corpus_data_sense_mappings_file)) or generate_sense_embeddings:\n",
+    "    manager = multiprocessing.Manager()\n",
+    "    tasks = manager.Queue()\n",
+    "    results = manager.Queue()\n",
+    "    num_processes = os.cpu_count()\n",
+    "    pool = multiprocessing.Pool(processes=num_processes)\n",
+    "    processes = []\n",
+    "    \n",
+    "    base_df = pd.DataFrame({\n",
+    "        \"word\": [],\n",
+    "        \"context\": [],\n",
+    "        \"sense_id\": [],\n",
+    "        \"sense_group_name\": [],\n",
+    "        \"sense_group_num\": [],\n",
+    "        \"sense_probability\": [],\n",
+    "        \"related_senses\": []\n",
+    "    })\n",
     "    wsd_model2 = WSD(sense_vectors, word_vectors, window=window, method='prob', verbose=False)\n",
     "    contextual_data = prepare_corpus_data_with_context(corpus_fpath, window=window, force_update=True)\n",
-    "    sense_group_dataframe = get_sense_group_from_corpus(contextual_data, wsd_model2, sense_vectors, corpus_data_sense_mappings_file)\n",
+    "    num_lines = len(contextual_data)\n",
+    "    batch_size = int(num_lines/num_processes)+1\n",
+    "    \n",
+    "    for i in range(num_processes):\n",
+    "        proc_name = f\"P_{i}\"\n",
+    "        start_idx = i*batch_size\n",
+    "        end_idx = min(num_lines, batch_size*(i+1))\n",
+    "        tasks.put([start_idx, end_idx])\n",
+    "        new_process = multiprocessing.Process(target=worker_func, args=(proc_name,tasks,results))\n",
+    "        processes.append(new_process)\n",
+    "        new_process.start()\n",
+    "        \n",
+    "    for i in range(num_processes):\n",
+    "        tasks.put(None)\n",
+    "    \n",
+    "    num_finished_processes = 0\n",
+    "    while True: \n",
+    "        new_result = results.get()\n",
+    "        if new_result == \"Done\":\n",
+    "            # Process has finished\n",
+    "            num_finished_processes += 1\n",
+    "            if num_finished_processes == num_processes:\n",
+    "                break\n",
+    "        else:\n",
+    "            output_df = output_df.append(new_result)\n",
+    "\n",
+    "    output_df.to_csv(output_file, index=False)\n",
     "else:\n",
     "    sense_group_dataframe = pd.read_csv(corpus_data_sense_mappings_file)"
    ]
