Run context extraction in parallel

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -76,7 +76,7 @@
     "# Constants\n",
     "load_vectors = True # Flag to decide to load sense and word vectors, to word with WSD module\n",
     "load_data = True # Flag to decide to load raw data\n",
-    "generate_sense_embeddings = False # Flag to decide to use vectors to generate sense embeddings for each noun in corpus\n",
+    "generate_sense_embeddings = True # Flag to decide to use vectors to generate sense embeddings for each noun in corpus\n",
     "generate_hypernymy_flag = True # Flag to decide to use wordnet to generate hypernymy map for each noun in the data"
    ]
   },
@@ -128,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Took 10.56437087059021seconds to load vector files\n",
+      "Took 9.301647901535034seconds to load vector files\n",
       "Reading the corpus now!\n"
      ]
     }
@@ -387,16 +387,16 @@
      "output_type": "stream",
      "text": [
       "Extracted context words:\n",
-      "['sell', 'yes', 'Im', 'bath', 'tell', 'haha', 'amazing', 'please', 'shes', 'list', 'captured', 'pants', 'uk', 'cctv']\n",
+      "['yes', 'list', 'Im', 'captured', 'cctv', 'pants', 'sell', 'haha', 'shes', 'bath', 'uk', 'tell', 'please', 'amazing']\n",
       "Senses of a target word:\n",
       "[('morning#1', 1.0)]\n",
       "Significance scores of context words:\n",
       "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "Context words:\n",
-      "sell\t0.000\n",
       "yes\t0.000\n",
+      "list\t0.000\n",
       "Im\t0.000\n",
-      "('morning#1', [0.6330168541350161])\n"
+      "('morning#1', [0.7792256481534722])\n"
      ]
     }
    ],
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,11 +574,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No pre created corpus found, or force update flag is true. Generating contextual data from corpus\n"
+     ]
+    }
+   ],
    "source": [
     "# Use WSD model to create file with Sense mappings\n",
     "if (not os.path.exists(corpus_data_sense_mappings_file)) or generate_sense_embeddings:\n",
@@ -599,10 +607,12 @@
     "        \"related_senses\": []\n",
     "    })\n",
     "    wsd_model2 = WSD(sense_vectors, word_vectors, window=window, method='prob', verbose=False)\n",
+    "    print(\"Load Data\")\n",
     "    contextual_data = prepare_corpus_data_with_context(corpus_fpath, window=window, force_update=True)\n",
     "    num_lines = len(contextual_data)\n",
     "    batch_size = int(num_lines/num_processes)+1\n",
     "    \n",
+    "    print(\"Generate contextual mappings\")\n",
     "    for i in range(num_processes):\n",
     "        proc_name = f\"P_{i}\"\n",
     "        start_idx = i*batch_size\n",
@@ -751,6 +761,15 @@
    ],
    "source": [
     "sense_group_dataframe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sense_group_dataframe.shape"
    ]
   },
   {
